feat(cats): Implement basic Cat entity system and spawning

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>Cargando Quiz Felino...</h1>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+      </div>
+    <div id="cat-container"></div> <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
