--- a/index.html
+++ b/index.html
@@ -2,13 +2,46 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Felino Interactivo</title>
     <link rel="stylesheet" href="/src/style.css" />
-  </head>
+    </head>
   <body>
     <div id="app">
       </div>
-    <div id="cat-container"></div> <script type="module" src="/src/main.ts"></script>
+
+    <div id="cat-container"></div>
+
+    <div id="right-controls" class="control-container">
+        <button id="shop-button" class="control-button" title="Abrir Tienda (S)">
+            🛒
+        </button>
+        </div>
+
+    <div id="blur-backdrop" class="blur-backdrop"></div>
+
+    <div id="shop-popup" class="overlay shop-overlay">
+        <div id="shop-content" class="shop-content-box">
+            <button id="shop-close-button" class="shop-close-btn" title="Cerrar Tienda (Esc)">&times;</button>
+
+            <h2 id="shop-title" class="shop-title-text">Tienda de Mejoras</h2>
+
+            <p id="shop-player-score" class="shop-score-text">Puntos: 0</p>
+
+            <div id="shop-items-container" class="shop-items-grid">
+                </div>
+
+            <div id="shop-tooltip" class="shop-tooltip-box">
+                <div id="tooltip-name" class="tooltip-item-name">Pasa el mouse sobre un ítem</div>
+                <div id="tooltip-level" class="tooltip-item-level hidden"></div>
+                <div id="tooltip-effect" class="tooltip-item-effect"></div>
+                <div id="tooltip-cost" class.="tooltip-item-cost"></div>
+                <div id="tooltip-status" class="tooltip-item-status hidden"></div>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
