--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             </div>
         </div>
     </div>
+    <div id="explanation-overlay" class="overlay">
+      <div class="overlay-content-wrapper">
+          <p id="explanation-text-content"></p>
+          <p class="overlay-continue-prompt">CLICK O TECLA PARA CONTINUAR</p>
+      </div>
+  </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
