--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
     <div id="right-controls" class="control-container">
         <button id="shop-button" class="control-button" title="Abrir Tienda (S)">
-            🛒
-        </button>
+            🛒 </button>
 
         <div id="drawing-buttons-container">
             <button id="toggle-brush-button" class="control-button" title="Activar/Desactivar Pincel (B)">
@@ -26,6 +25,12 @@
             <button id="clear-ink-button" class="control-button" title="Borrar Trazos (C)">
                 🗑️ </button>
         </div>
+
+        <div id="cat-food-ui-container" class="hidden"> <button id="cat-food-button" class="control-button" title="Activar/Desactivar Comida (F)">
+          🍲 </button>
+     <div id="cat-food-bar-container"> <div id="cat-food-bar-fill" style="height: 0%;"></div>
+     </div>
+ </div>
         </div>
 
     <div id="blur-backdrop" class="blur-backdrop"></div>
@@ -50,8 +55,7 @@
           <p id="explanation-text-content"></p>
           <p class="overlay-continue-prompt">CLICK O TECLA PARA CONTINUAR</p>
       </div>
-  </div>
-
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
