--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <canvas id="drawing-canvas"></canvas>
+    <body>
 
     <div id="app">
       </div>
