--- a/GatoQuiz/index.html
+++ b/GatoQuiz/index.html
@@ -51,8 +51,8 @@
 
     <div id="blur-backdrop" class="blur-backdrop"></div>
 
-    <shop-popup id="shop-popup" class="overlay shop-overlay">
-        </shop-popup>
+    <shop-popup id="shop-popup">
+    </shop-popup>
 
     <div id="explanation-overlay" class="overlay">
       <div class="overlay-content-wrapper">
