--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
               toolId="brush"
               icon="🖌️"
               titleText="Activar/Desactivar Pincel (B)"
-              id="toggle-brush-button"
-              class="control-button">
+              id="toggle-brush-button">
             </tool-button>
             <tool-button
               toolId="clear-ink"
               icon="🗑️"
               titleText="Borrar Trazos (C)"
               id="clear-ink-button"
-              class="control-button"
-              disabled> </tool-button>
+              disabled>
+            </tool-button>
         </div>
 
         <div id="cat-food-ui-container" class="hidden">
@@ -40,8 +39,7 @@
                toolId="cat-food"
                icon="🍲"
                titleText="Activar/Desactivar Comida (F)"
-               id="cat-food-button"
-               class="control-button">
+               id="cat-food-button">
              </tool-button>
              <div id="cat-food-bar-container">
                  <div id="cat-food-bar-fill"></div>
@@ -49,12 +47,12 @@
         </div>
     </div>
 
-    <button id="shop-button" class="control-button shop-button-standalone" title="Abrir Tienda (S)">🛒</button>
+    <button id="shop-button" class="shop-button-standalone" title="Abrir Tienda (S)">🛒</button>
 
     <div id="blur-backdrop" class="blur-backdrop"></div>
 
-    <shop-popup id="shop-popup" class="overlay shop-overlay">
-        </shop-popup>
+    <shop-popup id="shop-popup">
+    </shop-popup>
 
     <div id="explanation-overlay" class="overlay">
       <div class="overlay-content-wrapper">
